# framework-core

src/: build.sh  configure.ac
src/acinclude/: AC_CXX_BOOL.m4  AC_CXX_HAVE_STL.m4  Makefile.am  ax_boost_base.m4  ax_boost_filesystem.m4  ax_boost_regex.m4  ax_boost_serialization.m4  ax_boost_system.m4  ax_boost_thread.m4  ossie.m4
src/base/framework/: FileManager_impl.cpp  FileSystem_impl.cpp  Makefile.am
src/base/parser/: Makefile.am
src/base/parser/internal/: dcd-pskel.cpp  dmd-pskel.h  prf-pskel.cpp  profile-pskel.h  sad-pskel.cpp  scd-pskel.cpp
src/control/framework/: FileManager_impl.cpp  FileSystem_impl.cpp  Makefile.am  nodebooter.cpp
src/control/include/: xsd
src/control/parser/: Makefile.am
src/control/parser/internal/: dcd-pskel.h  dmd-pskel.cpp  dmd-pskel.h  dpd-pskel.cpp  dpd-pskel.h  prf-pskel.cpp  prf-pskel.h  profile-pskel.cpp  profile-pskel.h  sad-pskel.cpp  sad-pskel.h  scd-pskel.h  spd-pskel.cpp  spd-pskel.h
src/control/sdr/devmgr/: Makefile.am
src/testing/sdr/dev/devices/SimpleDevice/SimpleDevice_cpp_impl1/: Makefile.am
src/testing/sdr/dev/devices/issue_111_cpp/cpp/: Makefile.am
src/testing/sdr/dev/devices/props_test_device/props_test_device_cpp_impl1/: Makefile.am
src/testing/sdr/dom/components/TestAllPropTypes/cpp/: Makefile.am
src/testing/sdr/dom/components/ticket2093/cpp/: Makefile.am
